examples/negative/effects_phase2/handle_unknown_clause.err.expected
error: unknown op `unknown` on effect `Io`
  --> examples/negative/effects_phase2/handle_unknown_clause.kai:16:5
     |
  16 |     unknown(x, resume) -> resume(())
     |     ^
  = note: handler clauses must match an op declared in `effect Io { ... }`
  = help: either remove this clause, or add `unknown(...)` to the effect declaration
